--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,15 @@
-<h3>Liste des renters</h3>
-<p>
-  {{renters}}
-</p>
+<table mat-table [dataSource]="rents" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Loueur Column -->
+  <ng-container matColumnDef="loueur">
+    <th mat-header-cell *matHeaderCellDef> Loueur </th>
+    <td mat-cell *matCellDef="let rents"> {{rents.Client.name}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
