--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,159 @@
 <table mat-table [dataSource]="rents" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+          The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Loueur Column -->
-  <ng-container matColumnDef="loueur">
-    <th mat-header-cell *matHeaderCellDef> Loueur </th>
-    <td mat-cell *matCellDef="let rents"> {{rents.Client.name}} </td>
+  <ng-container matColumnDef="Loueur">
+    <th mat-header-cell *matHeaderCellDef>Loueur</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.renter.name}} </td>
   </ng-container>
+
+  <!-- Appartment Column -->
+  <ng-container matColumnDef="Appartement">
+    <th mat-header-cell *matHeaderCellDef>Appartement</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.appartment}} </td>
+  </ng-container>
+
+  <!-- Date entrée Column -->
+  <ng-container matColumnDef="Date Entrée">
+    <th mat-header-cell *matHeaderCellDef>Date Entrée</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate}} </td>
+  </ng-container>
+
+  <!-- Date sortie Column -->
+  <ng-container matColumnDef="Date Sortie">
+    <th mat-header-cell *matHeaderCellDef>Date Sortie</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.endDate}} </td>
+  </ng-container>
+
+  <!-- Locataire Column -->
+  <ng-container matColumnDef="Locataire">
+    <th mat-header-cell *matHeaderCellDef>Locataire</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.client.name}} {{rent.client.firstName}} </td>
+  </ng-container>
+
+  <!-- Téléphone Column -->
+  <ng-container matColumnDef="Téléphone">
+    <th mat-header-cell *matHeaderCellDef>Téléphone</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.client.phoneNumber}}</td>
+  </ng-container>
+
+  <!-- Nb Occupants Column -->
+  <ng-container matColumnDef="Nombre">
+    <th mat-header-cell *matHeaderCellDef>Nb Occupants</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.nbClient}}</td>
+  </ng-container>
+
+  <!-- Ménage Column -->
+  <ng-container matColumnDef="Ménage">
+    <th mat-header-cell *matHeaderCellDef>Ménage</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.cleaning}}</td>
+  </ng-container>
+
+  <!-- Parking Column -->
+  <ng-container matColumnDef="Parking">
+    <th mat-header-cell *matHeaderCellDef>Parking</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.parking}}</td>
+  </ng-container>
+
+  <!--  Column Site-->
+  <ng-container matColumnDef="Site">
+    <th mat-header-cell *matHeaderCellDef>Site</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.site}}</td>
+  </ng-container>
+
+  <!--  Column Prix-->
+  <ng-container matColumnDef="Prix">
+    <th mat-header-cell *matHeaderCellDef>Prix</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.price}}</td>
+  </ng-container>
+
+  <!--  Column Commentaires-->
+  <ng-container matColumnDef="Commentaires">
+    <th mat-header-cell *matHeaderCellDef>Commentaires</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.comments}}</td>
+  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-
+<br />
+<div>
+  <button mat-fab color="primary" (click)="addNewRent()" type="button">+</button>
+</div>
+<br />
+<div *ngIf="displayNewRentForm == true">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Nouvelle location</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <form [formGroup]="newRentForm" (submit)="saveNewRent()">
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="appartment" placeholder="Appartement" required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="renter" placeholder="Loueur" required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="startDate" placeholder="Date d'entrée" required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="endDate" placeholder="Date de sortie"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="client" placeholder="Locataire"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="phoneNumber" placeholder="Téléphone"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="nbClient" placeholder="Nb Occupants"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="cleaning" placeholder="Ménage"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="parking" placeholder="Parking"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="site" placeholder="Site"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="price" placeholder="Prix"  required />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input matInput formControlName="comments" placeholder="Commentaires"  required />
+        </mat-form-field>
+      </div>
+      <button mat-raised-button type="Save">Save</button>
+      <button mat-raised-button (click)="cancelNewRent()">Cancel</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
