--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,19 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <table mat-table [dataSource]="rents" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
+  <!-- Date entrée Column -->
+  <ng-container matColumnDef="Date Entrée">
+    <th mat-header-cell *matHeaderCellDef>Date Entrée</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate}} </td>
+  </ng-container>
+
+  <!-- Date sortie Column -->
+  <ng-container matColumnDef="Date Sortie">
+    <th mat-header-cell *matHeaderCellDef>Date Sortie</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.endDate}} </td>
+  </ng-container>
 
   <!-- Loueur Column -->
   <ng-container matColumnDef="Loueur">
@@ -13,18 +25,6 @@
   <ng-container matColumnDef="Appartement">
     <th mat-header-cell *matHeaderCellDef>Appartement</th>
     <td mat-cell *matCellDef="let rent"> {{rent.appartment}} </td>
-  </ng-container>
-
-  <!-- Date entrée Column -->
-  <ng-container matColumnDef="Date Entrée">
-    <th mat-header-cell *matHeaderCellDef>Date Entrée</th>
-    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate}} </td>
-  </ng-container>
-
-  <!-- Date sortie Column -->
-  <ng-container matColumnDef="Date Sortie">
-    <th mat-header-cell *matHeaderCellDef>Date Sortie</th>
-    <td mat-cell *matCellDef="let rent"> {{rent.period.endDate}} </td>
   </ng-container>
 
   <!-- Locataire Column -->
@@ -75,6 +75,16 @@
     <td mat-cell *matCellDef="let rent"> {{rent.comments}}</td>
   </ng-container>
 
+  <!--  Column Actions-->
+  <ng-container matColumnDef="Delete">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let rent">
+      <button mat-icon-button (click)="deleteRent(rent.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -90,69 +100,87 @@
       <mat-card-title>Nouvelle location</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <form [formGroup]="newRentForm" (submit)="saveNewRent()">
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="appartment" placeholder="Appartement" required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="renter" placeholder="Loueur" required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="startDate" placeholder="Date d'entrée" required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="endDate" placeholder="Date de sortie"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="client" placeholder="Locataire"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="phoneNumber" placeholder="Téléphone"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="nbClient" placeholder="Nb Occupants"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="cleaning" placeholder="Ménage"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="parking" placeholder="Parking"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="site" placeholder="Site"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="price" placeholder="Prix"  required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <input matInput formControlName="comments" placeholder="Commentaires"  required />
-        </mat-form-field>
-      </div>
-      <button mat-raised-button type="Save">Save</button>
-      <button mat-raised-button (click)="cancelNewRent()">Cancel</button>
+      <form [formGroup]="newRentForm" (submit)="saveNewRent()">
+        <div>
+          <mat-form-field>
+            <mat-label>Appartement</mat-label>
+            <mat-select formControlName="appartment">
+              <mat-option *ngFor="let appartment of appartments" [value]="appartment">
+                {{appartment}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput [matDatepicker]="picker" formControlName="startDate" placeholder="Date d'entrée" required>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput placeholder="Heure d'entrée" [ngxTimepicker]="fullTime" [format]="24" [value]="'15:00'"
+              formControlName="startTime" readonly>
+            <ngx-material-timepicker #fullTime></ngx-material-timepicker>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput [matDatepicker]="pickerEnd" formControlName="endDate" placeholder="Date de sortie" required>
+            <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+            <mat-datepicker #pickerEnd></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field>
+              <input matInput placeholder="Heure de sortie" [ngxTimepicker]="fullEndTime" [format]="24" [value]="'11:00'"
+                formControlName="endTime" readonly>
+              <ngx-material-timepicker #fullEndTime></ngx-material-timepicker>
+            </mat-form-field>
+          </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="client" placeholder="Locataire" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="phoneNumber" placeholder="Téléphone" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="nbClient" placeholder="Nb Occupants" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="cleaning" placeholder="Ménage" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="parking" placeholder="Parking" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="site" placeholder="Site" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="price" placeholder="Prix" required />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput formControlName="comments" placeholder="Commentaires" required />
+          </mat-form-field>
+        </div>
+        <button mat-raised-button type="Save">Save</button>
+        <button mat-raised-button (click)="cancelNewRent()">Cancel</button>
       </form>
     </mat-card-content>
   </mat-card>
