Ajout fonction last modif by et ajout composant login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>GRISONSKY TOWER</h1>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<mat-toolbar color="primary">
+    <span class="title-center">GRISONSKY TOWER</span>
+</mat-toolbar>
+<br />
 <router-outlet></router-outlet>
