--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
             </div>
             <div>
                 <mat-form-field>
-                    <input matInput formControlName="password" placeholder="Password" required />
+                    <input matInput formControlName="password" placeholder="Password" type="password" required/>
                 </mat-form-field>
             </div>
             <div>
