--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,13 +14,25 @@
   <!-- Date entrée Column -->
   <ng-container matColumnDef="startDate">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Entrée</th>
-    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate}} </td>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate | date:'dd-MM-yyyy'}} </td>
+  </ng-container>
+
+  <!-- Heure entrée Column -->
+  <ng-container matColumnDef="startTime">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Heure Entrée</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate | date:'HH:mm'}} </td>
   </ng-container>
 
   <!-- Date sortie Column -->
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Sortie</th>
-    <td mat-cell *matCellDef="let rent"> {{rent.period.endDate}} </td>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.endDate  | date:'dd-MM-yyyy'}} </td>
+  </ng-container>
+
+  <!-- Heure sortie Column -->
+  <ng-container matColumnDef="endTime">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Heure Sortie</th>
+    <td mat-cell *matCellDef="let rent"> {{rent.period.endDate  | date:'HH:mm'}} </td>
   </ng-container>
 
   <!-- Loueur Column -->
@@ -236,7 +248,7 @@
         </div>
         <div>
           <mat-form-field>
-            <input matInput placeholder="Heure d'entrée" [ngxTimepicker]="fullTime" [format]="24" [value]="'15:00'"
+            <input matInput placeholder="Heure d'entrée" [ngxTimepicker]="fullTime" [format]="24" [value]="rentStartTime"
               formControlName="startTime" readonly>
             <ngx-material-timepicker #fullTime></ngx-material-timepicker>
           </mat-form-field>
@@ -251,7 +263,7 @@
         </div>
         <div>
           <mat-form-field>
-            <input matInput placeholder="Heure de sortie" [ngxTimepicker]="fullEndTime" [format]="24" [value]="'11:00'"
+            <input matInput placeholder="Heure de sortie" [ngxTimepicker]="fullEndTime" [format]="24" [value]="rentEndTime"
               formControlName="endTime" readonly>
             <ngx-material-timepicker #fullEndTime></ngx-material-timepicker>
           </mat-form-field>
