--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 </mat-form-field>
 <br/>
 <div>
-<button mat-button (click)="getRents()">Tout</button><button mat-button (click)=getYearRents()>Année en cours</button><button mat-button (click)=getFutureRents()>Locations futures</button>
+<button mat-button (click)="getAllRents()">Tout</button><button mat-button (click)=getYearRents()>Année en cours</button><button mat-button (click)=getFutureRents()>Locations futures</button>
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
@@ -18,7 +18,7 @@
   <!-- Date entrée Column -->
   <ng-container matColumnDef="startDate">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Entrée</th>
-    <td mat-cell *matCellDef="let rent"> {{rent.period.startDate | date:'dd-MM-yyyy'}} </td>
+    <td mat-cell *matCellDef="let rent" > {{rent.period.startDate | date:'dd-MM-yyyy'}} </td>
   </ng-container>
 
   <!-- Heure entrée Column -->
@@ -122,7 +122,7 @@
 
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [hidden]="isDisplayed(row)"></tr>
 </table>
 <br />
 <div>
